syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

// type : "announce_end_turn"
// packet_type : DEFAULT
message AnnounceEndTurnPayload {
  string current_player = 1;
  string next_player = 2;
}